@@ -1,4 +1,5 @@
 28 June 2013
++ Add ioctl_flag_group test
 + Add nmi_soft_lockup_test
 
 + All the fuzzer stuff
